--- a/html/complectacia.html
+++ b/html/complectacia.html
@@ -8,8 +8,7 @@
     <title>complectacia</title>
     <!--Main css-->
     <link rel="stylesheet" href="css/main.css">
-    <!-- Page css-->
-    <link rel="stylesheet" href="css/complectacia.css">
+    <script src="js/jquery-2.2.4.min.js"></script>
     <base href="/">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries-->
     <!-- WARNING: Respond.js doesn't work if you view the page via file://--><!--[if lt IE 9]>
@@ -30,4 +29,6 @@
   <footer class="page__footer">
     <Some>page footer content</Some>
   </footer>
+  <!-- Main JS-->
+  <script src="js/main.js"></script>
 </body>
